@@ -23,8 +23,17 @@ void Controller::init() {
     
     this->m_numOfMapper = 3;
     
-    //should be modified
-    this->m_currStatus = 0;
+    //init the init status of each thread
+    this->m_currMainThreadStatus = NOP;
+    this->m_currClientThreadsStatus = new int[this->m_numOfMapper];
+    for(int i = 0; i < this->m_numOfMapper; i++) {
+	this->m_currClientThreadsStatus[i] = NOP;
+    }
+    
+    //init mutex
+    pthread_mutex_init(&(this->m_mainStatusMutex), NULL);
+    pthread_mutex_init(&(this->m_clientStatusMutex), NULL);
+    pthread_mutex_init(&(this->m_updateMutex), NULL);
 }
 
 bool Controller::runTask() {
@@ -44,8 +53,66 @@ bool Controller::runTask() {
 	return false;
     }
     
-    //step 3:
+    bool working = true;
+    
+    //step 3:loop to classify.
+    while(working) {
+	int status;
+	//get my status
+	pthread_mutex_lock(&(this->m_mainStatusMutex));
+	status = this->m_currMainThreadStatus;
+	pthread_mutex_unlock(&(this->m_mainStatusMutex));
+
+	pthread_mutex_lock(&(this->m_mainStatusMutex));	
+	switch(status) {
+	  case NOP:
+	    if(this->isAllClientsStatus(INIT)) {
+		this->m_currMainThreadStatus = INIT;
+	    }
+	    break;
+	  case INIT:
+	    if(this->isAllClientsStatus(WAIT)) {
+		this->m_currMainThreadStatus = CAL;
+	    }
+	    break;
+	  case CAL:
+	    if(this->isAllClientsStatus(WAIT)) {
+		if(this->canStopTask()) {
+		    this->m_currMainThreadStatus = END;
+		}
+	    }
+	    break;
+	  case END:
+	    working = false;
+	    break;
+	  default:
+	    break;
+	}
+	pthread_mutex_unlock(&(this->m_mainStatusMutex));
+    }
 }
+
+bool Controller::isAllClientsStatus(int tartgetStatus) {
+    bool flag = true;
+    
+    pthread_mutex_lock(&(this->m_clientStatusMutex));
+    for(int i = 0; i < this->m_numOfMapper; i++) {
+	if(this->m_currClientThreadsStatus[i] != tartgetStatus) {
+	    flag = false;
+	    break;
+	}
+    }
+    pthread_mutex_unlock(&(this->m_clientStatusMutex));
+    
+    return flag;
+}
+
+bool Controller::canStopTask() {
+    //should be added
+    
+    return false;
+}
+
 
 bool Controller::establishServer() {
     bool flag = true;
@@ -63,7 +130,6 @@ bool Controller::establishServer() {
 
 bool Controller::waitAllClients() {
     pthread_t * listPthread = new pthread_t[this->m_numOfMapper];
-    //pthread_gr
   
     for(int i = 0; i < this->m_numOfMapper; i++) {
 	TCPSocket *client;
@@ -76,7 +142,7 @@ bool Controller::waitAllClients() {
 	}
 	
 	cout<<"A client connected! client address: "<<client->getForeignAddress()<<"\tclient port: "<<client->getForeignPort()<<endl;
-	void * ret;
+	//void * ret;
 	int err = pthread_create(&listPthread[i], NULL, Controller::clientThread, client);
 	//err = pthread_join(listPthread[i], &ret);
     }
@@ -85,25 +151,69 @@ bool Controller::waitAllClients() {
 }
 
 void* Controller::clientThread(void* arg) {
-    TCPSocket *client = static_cast<TCPSocket*>(arg);  
-    cout<<"Thread :"<<client->getForeignPort()<<endl;
+    //get client tcp socket object
+    TCPSocket *client = static_cast<TCPSocket*>(arg); 
+    unsigned short clientPort = client->getForeignPort();
     
-    char *recv = new char[1024];
+    cout<<"Thread :"<<clientPort<<endl;
+        
+    //init this client thread status chage status into INIT
+    int index = clientPort - this->m_myPort - 1;
+    pthread_mutex_lock(&(this->m_clientStatusMutex));
+    this->m_currClientThreadsStatus[index] = INIT;
+    pthread_mutex_unlock(&(this->m_clientStatusMutex));
     
-    //test code, test connect
-    for(int i = 0; i < 100000; i++) {
-	if(client->getForeignPort() == 9991) {
-	  client->send("AAAA", 4);
-	} else {
-	  client->send("BBBB", 4);
+    //init flag
+    bool working = true;
+    int status;
+    
+    //loop to do task
+    while(working) {
+	
+	//get current status of process
+	pthread_mutex_lock(&(this->m_mainStatusMutex));
+	status = this->m_currMainThreadStatus;
+	pthread_mutex_unlock(&(this->m_mainStatusMutex));
+        
+	//change client thread status or communicate with client according main thread status
+	pthread_mutex_lock(&(this->m_currClientThreadsStatus));
+	
+	switch(status) {
+	  case WAIT:
+	    //do nothing, main thread has no status like this.
+	    break;
+	  case END:
+	    working = false;
+	    break;
+	  case INIT:
+	    //send init information to client.
+	    this->sendBasicInfoToClient();
+	    break;
+	  case CAL:
+	    //ask client to classify the data.
+	    this->askClientClassifyData();
+	    break;
+	  case NOP:
+	    //There is no status in main thread. Client thread do nothing.
+	    break;
+	  default:
+	    break;
 	}
-	client->recv(recv, 2);
-	cout<<"received: "<<recv<<endl;
+	
+	pthread_mutex_unlock(&(this->m_currClientThreadsStatus));
     }
-    
-    client->send("End!", 4);
-    cout<<"Finished!"<<client->getForeignPort()<<endl;
 }
+
+bool Controller::sendBasicInfoToClient() {
+    //should be added 
+    return false;
+}
+
+void Controller::askClientClassifyData() {
+    //should be added
+}
+
+
 
 
 
